# CREWAI

./: README.md
smartdebate/: README.md  pyproject.toml
smartdebate/output/: decide.md  oppose.md  propose.md  runtime-execution.txt
smartdebate/src/smartdebate/: crew.py  main.py
smartdebate/src/smartdebate/config/: agents.yaml  tasks.yaml
