[project]
name = "smartdebate"
version = "0.1.0"
description = "smartDebate using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.10.1",
]

[project.scripts]
smartdebate = "smartdebate.main:run"
run_crew = "smartdebate.main:run"
train = "smartdebate.main:train"
replay = "smartdebate.main:replay"
test = "smartdebate.main:test"
run_with_trigger = "smartdebate.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
